# CMake-Tutorial

./: CMakeLists.txt  README.md
hurricane/: CMakeLists.txt
hurricane/src/: test.cpp
include/: main.hpp
libmath/: CMakeLists.txt
libmath/include/: swoosh.hpp
libmath/src/: swoosh.cpp
src/: main.cpp
